--- a/action.yml
+++ b/action.yml
@@ -6,15 +6,15 @@ runs:
     - run: echo Hello there once!
       shell: bash
     - name: Testing the Error Workflow Command
-      run: echo "::notice::Testing error 1"
+      run: echo "::error::Testing error 1"
       shell: bash
     - run: echo Hello there
       shell: bash
     - name: Testing the Error Workflow Command
-      run: echo "::notice::Testing error 2"
+      run: echo "::error::Testing error 2"
       shell: bash
     - name: Testing the Error Workflow Command
-      run: echo "::notice::Testing warning"
+      run: echo "::warning::Testing warning"
       shell: bash
     - name: Testing the Error Workflow Command
       run: echo "::notice::Testing notice"
