--- a/action.yml
+++ b/action.yml
@@ -6,16 +6,16 @@ runs:
     - run: echo Hello there once!
       shell: bash
     - name: Testing the Error Workflow Command
-      run: echo "::error::Testing error 1"
+      run: echo "::error file=test_file.txt,line=1,col=1,endColumn=3::Testing error 1"
       shell: bash
     - run: echo Hello there
       shell: bash
     - name: Testing the Error Workflow Command
-      run: echo "::error::Testing error 2"
+      run: echo "::error file=test_file.txt,line=2,col=1,endColumn=3::Testing error 2"
       shell: bash
     - name: Testing the Warning Workflow Command
-      run: echo "::warning=7::Testing warning"
+      run: echo "::warning file=test_file.txt,line=3,col=1,endColumn=3=7::Testing warning"
       shell: bash
     - name: Testing the Notice Workflow Command
-      run: echo "::notice::Testing notice"
+      run: echo "::notice file=test_file.txt,line=4,col=1,endColumn=3::Testing notice"
       shell: bash
