--- a/.github/workflows/working_example.yml
+++ b/.github/workflows/working_example.yml
@@ -11,4 +11,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run action
-        uses: ./.github/actions
+        uses: ./.github/actions/working_composite
